* Stick to the lower-case variant of "gtk-gnutella".

--- a/extra_files/el/FAQ
+++ b/extra_files/el/FAQ
@@ -13,7 +13,7 @@
   <li><a href="#general-gtkg">Τι είναι το GTKG?</a></li>
   <li><a href="#general1">Σπαταλάει πολύ εύρος σύνδεσης!</a></li>
   <li><a href="#general-ultrapeer">Τι είναι οι υπερ-κόμβοι και οι δικτυακοί κόμβοι;</a></li>
-  <li><a href="#general-firewall">Γιατί το Gtk-Gnutella υποστηρίζει ότι έχω τοίχος 
+  <li><a href="#general-firewall">Γιατί το gtk-gnutella υποστηρίζει ότι έχω τοίχος 
     προστασίας ενώ δεν έχω;</a>
   </li>
 </ul>
@@ -162,12 +162,12 @@
   δικτυακούς κόμβους με τοίχος προστασίας.
 </p>
 
-<h3><a name="general-firewall">Γιατί το Gtk-Gnutella υποστηρίζει ότι έχω τοίχος
+<h3><a name="general-firewall">Γιατί το gtk-gnutella υποστηρίζει ότι έχω τοίχος
   προστασίας ενώ δεν έχω;</a>
 </h3>
 
 <p>
-Το Gtk-Gnutella πρέπει να λάβει μια εισερχόμενη σύνδεση για να προσδιορίσει αν μπορούν να
+Το gtk-gnutella πρέπει να λάβει μια εισερχόμενη σύνδεση για να προσδιορίσει αν μπορούν να
 σας φτάσουν από έξω. Μέχρι τότε, υποθέτει ότι υπάρχει ένα τοίχος
 προστασίας που φράζει τη ρυθμισμένη θύρα ακρόασης TCP.
 Αν θέλετε να επιταχύνετε τον εντοπισμό, χρησιμοποιήστε έναν περιηγητή διαδικτύου, κάντε telnet ή κάτι παρόμοιο
@@ -460,7 +460,7 @@ See also,
 <h3><a name="down2">Γιατί λαμβάνεται το ίδιο αρχείο X φορές;</a></h3>
 <p>
   Ελέγξτε τη στήλη <em>Εύρος</em>. Αυτό ονομάζεται
-  <a href="#down3">εξάπλωση</a>.  Το Gtk-Gnutella προσπαθεί να λάβει το αρχείο σε
+  <a href="#down3">εξάπλωση</a>.  Το gtk-gnutella προσπαθεί να λάβει το αρχείο σε
   <a href="#down4">κομμάτια</a> και θα το λάβει από πολλαπλούς υπολογιστές παράλληλα,
   αν είναι δυνατό.
 </p>
@@ -468,7 +468,7 @@ See also,
 <h3><a name="down3">Τι είναι η "εξάπλωση";</a></h3>
 <p>
   Η εξάπλωση περιγράφει τη δυνατότητα λήψης ενός αρχείου από πολλαπλούς υπολογιστές
-  παράλληλα. Το Gtk-Gnutella θα προσπαθήσει αυτόματα να βρει πρόσθετες πηγές
+  παράλληλα. Το gtk-gnutella θα προσπαθήσει αυτόματα να βρει πρόσθετες πηγές
   για κάθε αρχείο στη λίστα αναμονής χρησιμοποιώντας το <a href="#down5">πλέγμα λήψεων</a> και
   επιβλέποντας τα δρομολογημένα αποτελέσματα.
 </p>
@@ -519,7 +519,7 @@ See also,
   <a href="#gnet1">τοίχος προστασίας</a>.
 </p>
 <p>
-  Αλλιώς, αν το Gtk-Gnutella λέει ότι έχει μόνο λίγες πηγές για το αρχείο
+  Αλλιώς, αν το gtk-gnutella λέει ότι έχει μόνο λίγες πηγές για το αρχείο
   (φαίνεται καλύτερα στην υπο-καρτέλα των πληροφοριών αρχείου στο παράθυρο λήψεων) αυτό μπορεί
   να συμβαίνει για δύο λόγους:
 </p>
