--- a/extra_files/ja/FAQ
+++ b/extra_files/ja/FAQ
@@ -13,7 +13,7 @@
   <li><a href="#general-gtkg">「GTKG」って何ですか？</a></li>
   <li><a href="#general1">たくさんの帯域幅を使い切ってしまいます！</a></li>
   <li><a href="#general-ultrapeer">ウルトラピアとリーフピアって何ですか？</a></li>
-  <li><a href="#general-firewall">なぜ Gtk-Gnutella は実際は違う時でも私のマシンがファイアウォール内にあると言ってくるのですか？</a>
+  <li><a href="#general-firewall">なぜ gtk-gnutella は実際は違う時でも私のマシンがファイアウォール内にあると言ってくるのですか？</a>
   </li>
 </ul>
 
@@ -29,7 +29,7 @@
   <li><a href="#gnet0">丁度良い接続件数はどれ位ですか？</a></li>
   <li><a href="#gnet1">ファイアウォールのポートを転送する必要はありますか？</a></li>
   <li><a href="#gnet-forward-howto">どのようにポート転送の設定をするのですか？</a></li>
-  <li><a href="#gnet-udp">Gtk-Gnutella は UDP を利用しますか？</a></li>
+  <li><a href="#gnet-udp">gtk-gnutella は UDP を利用しますか？</a></li>
   <li><a href="#gnet2">「[FC]」は何を意味するんですか？</a></li>
   <li><a href="#gnet3">なぜアップロードしている時に Gnet 接続が途切れていってしまうのですか？</a></li>
   <li><a href="#gnet4">フラッグ欄にある英字の意味は何ですか？</a></li>
@@ -74,7 +74,7 @@
 
 <h2>GTK+ 2.x</h2>
 <ul>
-  <li><a href="#gtk2_slow">GTK2 版の Gtk-Gnutella がとても遅いんですが。</a></li>
+  <li><a href="#gtk2_slow">GTK2 版の gtk-gnutella がとても遅いんですが。</a></li>
 </ul>
 
 <!--
@@ -94,7 +94,7 @@
 
 <h3><a name="general-gtkg">「GTKG」って何ですか？</a></h3>
 <p>
-  私達はよく Gtk-Gnutella を GTKG または gtkg と言います (なぜなら短いからです)。GTK は Gtk-Gnutella に使用されているグラフィカル・ツールキットの GTK+ から来ています。
+  私達はよく gtk-gnutella を GTKG または gtkg と言います (なぜなら短いからです)。GTK は gtk-gnutella に使用されているグラフィカル・ツールキットの GTK+ から来ています。
 </p>
 
 <h3><a name="general1">たくさんの帯域幅を使い切ってしまいます！</a></h3>
@@ -121,17 +121,17 @@
 
 <h3><a name="general-ultrapeer">ウルトラピアとリーフピアって何ですか？</a></h3>
 <p>
-  バージョン 0.92 以降、Gtk-Gnutella には<a href="?page=features"><em>ウルトラピア</em></a>および<em>リーフピア</em>が実装されています。これは Gnutella ネットワークにおいてサーバントをリーフピアとウルトラピアに分けます。リーフピアはただウルトラピアに接続するだけなのに対し、ウルトラピアは多くのリーフピアと他の少しのウルトラピアに接続します (<a href="#gnet0">丁度良い接続件数はどれ位ですか？</a> を御覧下さい)。
+  バージョン 0.92 以降、gtk-gnutella には<a href="?page=features"><em>ウルトラピア</em></a>および<em>リーフピア</em>が実装されています。これは Gnutella ネットワークにおいてサーバントをリーフピアとウルトラピアに分けます。リーフピアはただウルトラピアに接続するだけなのに対し、ウルトラピアは多くのリーフピアと他の少しのウルトラピアに接続します (<a href="#gnet0">丁度良い接続件数はどれ位ですか？</a> を御覧下さい)。
 </p>
 <p>
   ウルトラピアはファイアウォール内にあってはいけません、また長期の稼働時間 (二時間以上) が見込まれます。Gnet に寄与するだけ十分な余剰帯域幅があることも期待されています。ウルトラピアは接続しているリーフピアからのクエリーを転送し、リーフピアは接続しているウルトラピアに <a href="?page=features">QRP</a> テーブルをアップロードします。この QRP テーブルにはリーフに共有されているファイルに一致するキーワードのハッシュ値が含まれています。あるウルトラピアがクエリー経路設定テーブルにあるヒットを受け取ると、そのクエリーを対応するリーフピアに中継します。この結果、共有およびダウンロードのための帯域幅を解放しつつ、それぞれのリーフピアに対して非常に低い Gnet トラフィックが発生します。ウルトラピアはファイアウォール内にあるリーフピアに対して <a href="?page=features">PUSH プロキシ</a>としても振る舞えます。
 </p>
 
-<h3><a name="general-firewall">なぜ Gtk-Gnutella は実際は違う時でも私のマシンがファイアウォール内にあると言ってくるのですか？</a>
+<h3><a name="general-firewall">なぜ gtk-gnutella は実際は違う時でも私のマシンがファイアウォール内にあると言ってくるのですか？</a>
 </h3>
 
 <p>
-  Gtk-Gnutella は外部からあなたに到達できるかどうかを判別するために、内側に入って来る接続を受信する必要があります。その時までは、設定された待ち受け TCP ポートを塞いでしまうファイアウォールがあるものと見なされます。この検出を早くしたいのでしたら、ウェブブラウザー、telnet またはそれに似たものを使用して外側からその待ち受けポートに接続して下さい。この接続が拒否されたり破棄されるなら、ポートを塞ぐファイアウォール、あるいは誤って設定された NAT, それに類似するものが原因になって、多分あなたは実際に到達不能になっています。一部の ISP は標準の Gnutella ポート (6346) を塞いでいますので、異なる待ち受け TCP ポートを試してみるとよいかもしれません。併せて <a href="#gnet1"><q>ファイアウォールのポートを転送する必要がありますか？</q></a> も御覧下さい。
+  gtk-gnutella は外部からあなたに到達できるかどうかを判別するために、内側に入って来る接続を受信する必要があります。その時までは、設定された待ち受け TCP ポートを塞いでしまうファイアウォールがあるものと見なされます。この検出を早くしたいのでしたら、ウェブブラウザー、telnet またはそれに似たものを使用して外側からその待ち受けポートに接続して下さい。この接続が拒否されたり破棄されるなら、ポートを塞ぐファイアウォール、あるいは誤って設定された NAT, それに類似するものが原因になって、多分あなたは実際に到達不能になっています。一部の ISP は標準の Gnutella ポート (6346) を塞いでいますので、異なる待ち受け TCP ポートを試してみるとよいかもしれません。併せて <a href="#gnet1"><q>ファイアウォールのポートを転送する必要がありますか？</q></a> も御覧下さい。
 </p>
 
 <h2>ソースからのビルド</h2>
@@ -144,7 +144,7 @@
   <kbd>$ ./Configure -ders</kbd>
 </p>
 <p>
-  コマンド行でコンパイル・オプションをセットすることもできます。ここにある例では Gtk-Gnutella は以下のように設定されます。
+  コマンド行でコンパイル・オプションをセットすることもできます。ここにある例では gtk-gnutella は以下のように設定されます。
 </p>
 <ul>
   <li>
@@ -174,14 +174,14 @@
   バージョン 0.95 で「高出次数 (High OutDegree)」が用いられるようになりましたので、他のウルトラピアに対して 32/40 件の接続を確保すべきでしょう。利用するリーフ接続の件数はあなたの帯域幅および CPU の速度によります。ウルトラピアは最低 20 基のリーフピアに接続すべきですが、100 基以上に接続していることが非常に望まれます。GUI の左下の方にある帯域幅のオドメーターを観察して、CPU の使用率を追い続けるためにコマンド top を使用して下さい。帯域幅およびこの目的のために費してもよいと思うシステム・リソースの最大値に達するまでリーフ接続の件数を上げていって下さい。
 </p>
 <p>
-  <em>ファイル-&gt;環境設定-&gt;帯域幅</em>で Gtk-Gnutella が使う帯域幅をさらに微調整できるでしょう。
+  <em>ファイル-&gt;環境設定-&gt;帯域幅</em>で gtk-gnutella が使う帯域幅をさらに微調整できるでしょう。
 </p>
 
 <h3><a name="gnet1">ファイアウォールのポートを転送する必要はありますか？</a></h3>
 <p>
-  Gtk-Gnutella を動作させるためにいずれかのポートを転送する必要はありませんが、これを行えば断然よくなります。あなたがファイアウォールの内側にいると見なされる場合、<a href="#down_push">"PUSH"</a> を必要とする検索結果はいずれも表示されません。と言うのも、いずれにせよこれらのファイルはダウンロードできないからです。<br>
+  gtk-gnutella を動作させるためにいずれかのポートを転送する必要はありませんが、これを行えば断然よくなります。あなたがファイアウォールの内側にいると見なされる場合、<a href="#down_push">"PUSH"</a> を必要とする検索結果はいずれも表示されません。と言うのも、いずれにせよこれらのファイルはダウンロードできないからです。<br>
   あなたに直接接続できない時であっても、他の人は <a href="#down_push">PUSH リクエスト</a>を利用することであなたのピアからファイルをダウンロードすることができます。<br>
-  <em>ファイル-&gt;環境設定-&gt;ネットワーク</em>にある<em>待受ポート</em>で Gtk-Gnutella の待ち受けポートを設定できます。
+  <em>ファイル-&gt;環境設定-&gt;ネットワーク</em>にある<em>待受ポート</em>で gtk-gnutella の待ち受けポートを設定できます。
 </p>
 
 <h3><a name="gnet-forward-howto">どのようにポート転送の設定をするのですか？</a></h3>
@@ -189,9 +189,9 @@
   <a href="http://www.portforward.com/routers.htm">http://www.portforward.com/routers.htm</a> に大半の有名なルーターの注意書きがあります。ポートの転送を確認するには <a href="http://www.canyouseeme.org/">http://www.canyouseeme.org/</a> を試してみて下さい。
 </p>
 
-<h3><a name="gnet-udp">Gtk-Gnutella は UDP を利用しますか？</a></h3>
+<h3><a name="gnet-udp">gtk-gnutella は UDP を利用しますか？</a></h3>
 <p>
-  はい、バージョン 0.95 の Gtk-Gnutella から <a href="http://www.faqs.org/rfcs/rfc793.html">TCP</a> に加えて <a href="http://www.faqs.org/rfcs/rfc768.html">UDP</a> も利用できます。
+  はい、バージョン 0.95 の gtk-gnutella から <a href="http://www.faqs.org/rfcs/rfc793.html">TCP</a> に加えて <a href="http://www.faqs.org/rfcs/rfc768.html">UDP</a> も利用できます。
 </p>
 
 <h3><a name="gnet2">「[FC]」は何を意味するんですか？</a></h3>
@@ -201,7 +201,7 @@
 
 <h3><a name="gnet3">なぜアップロードしている時に Gnet 接続が途切れていってしまうのですか？</a></h3>
 <p>
-  帯域幅の制限を掛けてみて下さい。これでも駄目なら恐らくプロバイダが Gnutella トラフィックを絞っています。Gtk-Gnutella のネットワーク設定で Gnutella のポートを変更してみて下さい。
+  帯域幅の制限を掛けてみて下さい。これでも駄目なら恐らくプロバイダが Gnutella トラフィックを絞っています。gtk-gnutella のネットワーク設定で Gnutella のポートを変更してみて下さい。
 </p>
 
 <h3><a name="gnet4">フラッグ欄にあるこの英字の意味は何ですか？</a></h3>
@@ -232,13 +232,13 @@
 <!-- FIXME: out-of-dated -->
 <h3><a name="gnet5">「有害なバージョンが禁止されました、アップグレードが必要です」というステータス文の意味は何ですか？</a></h3>
 <p>
-  時折、サーバントにバグがあったり Gnet に対して有害な振る舞いをしてしまう事が明らかになります。例えば Gtk-Gnutella 0.92b には <a href="index.php?page=gwebcache">GWebCache システム</a>を頻繁にアクセスしてしまう (hammering) 桁外れなクエリーを生成するバグがあります。このような差し止めは例外です、通常は特定のバージョンが制約されてサーバントの実行者がその差し止めに関して知らされます。
+  時折、サーバントにバグがあったり Gnet に対して有害な振る舞いをしてしまう事が明らかになります。例えば gtk-gnutella 0.92b には <a href="index.php?page=gwebcache">GWebCache システム</a>を頻繁にアクセスしてしまう (hammering) 桁外れなクエリーを生成するバグがあります。このような差し止めは例外です、通常は特定のバージョンが制約されてサーバントの実行者がその差し止めに関して知らされます。
 </p>
 
 <!-- FIXME: out-of-dated -->
 <h3><a name="gnet6">「バージョンが古くなっています、アップグレードして下さい」というステータス文の意味は何ですか？</a></h3>
 <p>
-  一年以上前のバージョンの Gtk-Gnutella は使用が禁止されます、というのも、これらは急速に進化する Gnutella ネットワークの健全性とその規模の拡大にとって大切な機能がないからです。ちなみに開発版は 90 日後に差し止められます。
+  一年以上前のバージョンの gtk-gnutella は使用が禁止されます、というのも、これらは急速に進化する Gnutella ネットワークの健全性とその規模の拡大にとって大切な機能がないからです。ちなみに開発版は 90 日後に差し止められます。
 </p>
 
 <h3><a name="gnet7">なぜ HTTP プロキシが働かないのですか？</a></h3>
@@ -291,46 +291,46 @@
 
 <h3><a name="search-passive">「受動」検索って何ですか？</a></h3>
 <p>
-  <q><em>受動</em></q> 検索は Gtk-Gnutella を通過するすべての検索結果を返してきます。これらの検索結果を<a href="index.php?page=filtering_howto">条件検索</a>に掛けると受動検索は役に立つかもしれません。
+  <q><em>受動</em></q> 検索は gtk-gnutella を通過するすべての検索結果を返してきます。これらの検索結果を<a href="index.php?page=filtering_howto">条件検索</a>に掛けると受動検索は役に立つかもしれません。
 </p>
 <p>
   <a href="#general-ultrapeer">ウルトラ</a>モードにあるなら、あなた自身の検索に加えて、すでに多くの検索結果があなたのピアを通り過ぎています。あなたは余分な Gnet トラフィックを発生させることなく、これを検索に利用することができます。例えば 200 基の <a href="#general-ultrapeer">リーフピア</a>と接続している私のウルトラピアで、受動検索を開き名前 <q><em>eminem</em></q> にヒットする検索結果のみを表示するようフィルターを設定したとします。一時間になるかならないかの内に約 1500 件ほどの検索結果を得ました。検索内容がより人気のあるものであればある程、より待てば待つ程、このテクニックが有益なものになる事は明らかです。
 </p>
 <p>
-  リーフモードの場合、Gtk-Gnutella を通過していくことになる唯一の検索結果はあなた自身の検索になりますので、上記のテクニックは役に立たないでしょう。しかし、リーフモードでのみ役に立つ受動検索の使用法が別にあります。例えば、受動検索を開始してそのフィルターで mp3 ファイルのみを表示するようにすると、開いているすべての検索リスト/タブからのすべての mp3 ファイルが、便利にも一つの検索ウィンドウに集められるようになります。異なるフィルターを備えた受動検索をもっと開くことで、それぞれに違う種類のファイルを表示できるようになります。
+  リーフモードの場合、gtk-gnutella を通過していくことになる唯一の検索結果はあなた自身の検索になりますので、上記のテクニックは役に立たないでしょう。しかし、リーフモードでのみ役に立つ受動検索の使用法が別にあります。例えば、受動検索を開始してそのフィルターで mp3 ファイルのみを表示するようにすると、開いているすべての検索リスト/タブからのすべての mp3 ファイルが、便利にも一つの検索ウィンドウに集められるようになります。異なるフィルターを備えた受動検索をもっと開くことで、それぞれに違う種類のファイルを表示できるようになります。
 </p>
 
 <h3><a name="encoding">なぜ文字化けしている検索結果があるのですか？</a></h3>
 <p>
-  最近の Gnutella ネットワークにおけるファイル名の標準的なエンコーディング (エンコード方式) は UTF-8 です。全ての検索クエリーおよび検索結果はこれでエンコードされるべきです。残念なことですが、ファイル名や検索クエリーのような文字データを UTF-8 に変換せず、その代わりに任意の文字エンコード方式を使用する昔からのソフトウェアがまだ数多くあります。Gtk-Gnutella は使用されているエンコーディングを検出するよう試みますが、完全なものにはなり得ません。UTF-8 に変換できない文字がある場合は、下線 (アンダースコアー) で置き換えるかもしれません。
+  最近の Gnutella ネットワークにおけるファイル名の標準的なエンコーディング (エンコード方式) は UTF-8 です。全ての検索クエリーおよび検索結果はこれでエンコードされるべきです。残念なことですが、ファイル名や検索クエリーのような文字データを UTF-8 に変換せず、その代わりに任意の文字エンコード方式を使用する昔からのソフトウェアがまだ数多くあります。gtk-gnutella は使用されているエンコーディングを検出するよう試みますが、完全なものにはなり得ません。UTF-8 に変換できない文字がある場合は、下線 (アンダースコアー) で置き換えるかもしれません。
 </p>
 
 <h2>ダウンロード</h2>
 
 <h3><a name="down0">「リクエストされた [SHA1|名前 &amp; サイズ] を無視します」というステータス文の意味は何ですか？</a></h3>
 <p>
-  これは Gtk-Gnutella のデータベースにそのファイルが完了したものとして記録されていることを意味します。このデータベースは通常 <code>~/.gtk-gnutella/done.sha1</code> および <code>~/.gtk-gnutella/done.namesize</code> にあります。今のところ GUI でこのデータベースにあるエントリーを削除したり変更したりする方法はありませんが、Gtk-Gnutella が走っていない時にこのファイルをテキストエディターで編集できます。これらのファイルに何か追加したり削除するには、他のエントリーと同じようにして下さい。
+  これは gtk-gnutella のデータベースにそのファイルが完了したものとして記録されていることを意味します。このデータベースは通常 <code>~/.gtk-gnutella/done.sha1</code> および <code>~/.gtk-gnutella/done.namesize</code> にあります。今のところ GUI でこのデータベースにあるエントリーを削除したり変更したりする方法はありませんが、gtk-gnutella が走っていない時にこのファイルをテキストエディターで編集できます。これらのファイルに何か追加したり削除するには、他のエントリーと同じようにして下さい。
 </p>
 
 <h3><a name="down1">「サーバーに URN がありません」というステータス文の意味は何ですか？</a></h3>
 <p>
-  これは Gtk-Gnutella がホストから新しいファイルをダウンロードしようとしているのに、そのホストが当該ファイルの SHA1 ハッシュを提供しないことを意味します。(まだ部分的にもダウンロードされていない) 新しいファイルだと、ホストにあるファイルが本当に望むものであるかを検証するためのオーバーラップ・チェックができません。そのような場合は遠隔ホストが提供する SHA1 に頼ることになるのですが、もし SHA1 が与えられないとダウンロードしたいファイルおよび遠隔サーバーにあるファイルが実際に同じものであるかを保証する術がなくなってしまいます。<br>
+  これは gtk-gnutella がホストから新しいファイルをダウンロードしようとしているのに、そのホストが当該ファイルの SHA1 ハッシュを提供しないことを意味します。(まだ部分的にもダウンロードされていない) 新しいファイルだと、ホストにあるファイルが本当に望むものであるかを検証するためのオーバーラップ・チェックができません。そのような場合は遠隔ホストが提供する SHA1 に頼ることになるのですが、もし SHA1 が与えられないとダウンロードしたいファイルおよび遠隔サーバーにあるファイルが実際に同じものであるかを保証する術がなくなってしまいます。<br>
   これらのメッセージにうんざりしているなら、<em>ファイル-&gt;環境設定-&gt;ダウンロード</em>の<em>最初のチャンクを大目に見る</em>を有効にすることができます。
 </p>
 
 <h3><a name="down2">なぜ同じファイルが何回もダウンロードされるのですか？</a></h3>
 <p>
-  <em>取得範囲</em>欄を確認して下さい。これは<a href="#down3">多元ダウンロード (Swarming)</a> と呼ばれるものです。可能であれば Gtk-Gnutella はファイルを<a href="#down4">チャンク</a>で取得しようと試み、同時並行的に複数のホストからダウンロードします。<!-- NEW: from-here -->ちなみに、取得範囲欄での表示形式は「リクエストしているサイズ @ 当該ファイルにおける位置 (オフセット)」になっています。<!-- NEW: end-here -->
+  <em>取得範囲</em>欄を確認して下さい。これは<a href="#down3">多元ダウンロード (Swarming)</a> と呼ばれるものです。可能であれば gtk-gnutella はファイルを<a href="#down4">チャンク</a>で取得しようと試み、同時並行的に複数のホストからダウンロードします。<!-- NEW: from-here -->ちなみに、取得範囲欄での表示形式は「リクエストしているサイズ @ 当該ファイルにおける位置 (オフセット)」になっています。<!-- NEW: end-here -->
 </p>
 
 <h3><a name="down3">「多元ダウンロード (Swarming)」って何ですか？</a></h3>
 <p>
-  多元ダウンロードを説明すると、それは一つのファイルを複数のホストから同時並行的にダウンロードすることです。Gtk-Gnutella は<a href="#down5">ダウンロードメッシュ</a>を利用しながら、また送られてきた結果を監視することで、待機状態になっているファイルのための新たな送信元を自動的に探すよう試みます。
+  多元ダウンロードを説明すると、それは一つのファイルを複数のホストから同時並行的にダウンロードすることです。gtk-gnutella は<a href="#down5">ダウンロードメッシュ</a>を利用しながら、また送られてきた結果を監視することで、待機状態になっているファイルのための新たな送信元を自動的に探すよう試みます。
 </p>
 
 <h3><a name="down4">「チャンク」って何ですか？</a></h3>
 <p>
-  <em>チャンク</em>は、言い換えると<em>ファイルの一部分</em>です。Gtk-Gnutella が <a href="#down3">多元ダウンロード (Swarming) モード</a>で動作している時には、ファイルを完全にダウンロードし終えるまでダウンロードするファイルの複数のチャンクを取得するようになります。<em>取得範囲</em>欄は現在どのチャンクをダウンロードしているかを表示します。
+  <em>チャンク</em>は、言い換えると<em>ファイルの一部分</em>です。gtk-gnutella が <a href="#down3">多元ダウンロード (Swarming) モード</a>で動作している時には、ファイルを完全にダウンロードし終えるまでダウンロードするファイルの複数のチャンクを取得するようになります。<em>取得範囲</em>欄は現在どのチャンクをダウンロードしているかを表示します。
 </p>
 
 <h3><a name="down5">「ダウンロードメッシュ」って何ですか？</a></h3>
@@ -355,7 +355,7 @@
   ステータスバーにサングラスを掛けた黄色のスマイリーアイコンが表示されていないなら、これを変えるよう試みるべきでしょう。<a href="#gnet1">ファイアウォール</a> に関する部分を御覧下さい。
 </p>
 <p>
-  そうではなく、Gtk-Gnutella がそのファイルに対してほんの少しの送信元しか表示しないなら (ダウンロード・ペインの「数」欄を御覧下さい)、これは二つの可能性があります:
+  そうではなく、gtk-gnutella がそのファイルに対してほんの少しの送信元しか表示しないなら (ダウンロード・ペインの「数」欄を御覧下さい)、これは二つの可能性があります:
 </p>
 <ul>
   <li>珍しいファイルである。</li>
@@ -374,7 +374,7 @@
 
 <h3><a name="filenames">ファイル名エンコーディングって何ですか？</a></h3>
 <p>
-  Gtk-Gnutella はファイル名の標準のエンコード方式として UTF-8 を使用します。もしロケールの設定が UTF-8 を使用しないのでしたら、他のアプリケーションはこれらのファイル名を正しく表示しないか、最悪の場合、アクセスそのものに問題を抱えるかもしれません。環境変数 G_FILENAME_ENCODING を使用することで、このエンコード方式を変更することが可能です。これは GTK+ や GLib を利用する殆んどのアプリケーションに影響を及ぼします。<!-- NEW: from-here -->検索結果のファイル名エンコーディングは、<em>エンコード方式</em>欄で確認できます。検索結果のファイル内容 (コーデック等) とは関係がありませんので注意して下さい。<!-- NEW: end-here -->
+  gtk-gnutella はファイル名の標準のエンコード方式として UTF-8 を使用します。もしロケールの設定が UTF-8 を使用しないのでしたら、他のアプリケーションはこれらのファイル名を正しく表示しないか、最悪の場合、アクセスそのものに問題を抱えるかもしれません。環境変数 G_FILENAME_ENCODING を使用することで、このエンコード方式を変更することが可能です。これは GTK+ や GLib を利用する殆んどのアプリケーションに影響を及ぼします。<!-- NEW: from-here -->検索結果のファイル名エンコーディングは、<em>エンコード方式</em>欄で確認できます。検索結果のファイル内容 (コーデック等) とは関係がありませんので注意して下さい。<!-- NEW: end-here -->
 </p>
 
 <p>
@@ -396,7 +396,7 @@
 </p>
 
 <p>
-  リストにある最初の項目はファイルを保存するのに使用されるエンコード方式です。後に続く項目はディスクにある既に存在するファイル名に使用されます、これらのファイル名は Gnutella サーバントが表示したり情報交換を行うために Gtk-Gnutella 内部で UTF-8 に変換されます (ディスク上のファイル名が強制変換されてしまう訳ではありません)。西ヨーロッパにお住いでファイル名に非 ASCII 文字を含むファイルおよび ISO-8859-1 でエンコードされるファイルを共有するのでしたら、上のリストに ISO-8859-1 を加えるのが推奨されます。日本語ファイル名を使用するなら、恐らく上の設定で充分だと思います。その他の地域にお住いの方は、適切な他のエンコーディングを設定して下さい。
+  リストにある最初の項目はファイルを保存するのに使用されるエンコード方式です。後に続く項目はディスクにある既に存在するファイル名に使用されます、これらのファイル名は Gnutella サーバントが表示したり情報交換を行うために gtk-gnutella 内部で UTF-8 に変換されます (ディスク上のファイル名が強制変換されてしまう訳ではありません)。西ヨーロッパにお住いでファイル名に非 ASCII 文字を含むファイルおよび ISO-8859-1 でエンコードされるファイルを共有するのでしたら、上のリストに ISO-8859-1 を加えるのが推奨されます。日本語ファイル名を使用するなら、恐らく上の設定で充分だと思います。その他の地域にお住いの方は、適切な他のエンコーディングを設定して下さい。
 </p>
 
   <!-- Translators: Feel free to change the ISO-8859-1 example to whatever
@@ -407,7 +407,7 @@
 </p>
 
 <p>
-  フロントエンドとして GTK+ 1.2 または GTK+ 2.x を使用しているかどうかに関わらず、Gtk-Gnutella はバージョン 0.96 以降 G_FILENAME_ENCODING をサポートします。
+  フロントエンドとして GTK+ 1.2 または GTK+ 2.x を使用しているかどうかに関わらず、gtk-gnutella はバージョン 0.96 以降 G_FILENAME_ENCODING をサポートします。
 </p>
 
 <h2>アップロード</h2>
@@ -419,7 +419,7 @@
 
 <h2>GTK+ 2.x</h2>
 
-<h3><a name="gtk2_slow">GTK2 版の Gtk-Gnutella がとても遅いんですが。</a></h3>
+<h3><a name="gtk2_slow">GTK2 版の gtk-gnutella がとても遅いんですが。</a></h3>
 <p>
   GTK+ 2.x には複雑かつ強力なフォント描画機能が備わっていますし、将来のバージョンはより最適化されるという期待もあります。この性能に耐えられないのであれば、代わりに GTK+ 1.2 を使用することを考慮した方がよいでしょう。しかしながら、ウィンドウをできるだけ小さくしたり、ただペインを切替えるだけでしたら、体感速度はたいして変わりません。
 </p>
